Fix centering and wrapping in content-box-2

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 28px;
@@ -74,6 +73,7 @@ ul {
 .content-box-2 h4 {
     display: flex;
     justify-content: center;
+    text-align: center;
     font-size: 36px;
     font-weight:800;
     color: #1F2937;
@@ -86,6 +86,8 @@ ul {
 
 .images-and-txt-container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .images-and-txt-container img {
@@ -94,18 +96,22 @@ ul {
     border-color: #3882F6;
     border-radius: 10px;
     border-width: 5px;
+    overflow-clip-margin: content-box;
 }
 
 .img-and-txt {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;    
+    text-align: center;
+    width: 200px;   
+    margin: 20px; 
 }
 
 .img-and-txt p {
     font-size: 18px;
     color: #1F2937;
+    margin: 18px;
 }
 
 .content-box-3 {
